--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ DB_PASSWORD=
 DB_DATABASE=adonis
 
 HASH_DRIVER=bcrypt
+
+SMTP_PORT=2525
+SMTP_HOST=smtp.mailtrap.io
+MAIL_USERNAME=
+MAIL_PASSWORD=
+
+SENTRY_DNS=
